<resources>
    <string name="app_name">PopularMovies</string>
    <string name="app_title">Pop Movies</string>

    <!-- Settings menu - sort order -->
    <string name="sort_by">Sort by</string>
    <string name="sort_highest_rated">Highest Rated</string>
    <string name="sort_most_popular">Most Popular</string>
    <string name="sort_favorites">Favorites</string>
    <string name="settings_clear_favorites">Clear favorites</string>

    <!-- Clear Favorites dialog-->
    <string name="clear_favorites_title">Clear Favorites</string>
    <string name="clear_favorites_message">Do you want to clear all your \'favorites\' selection.</string>
    <string name="clear_favorites_clear">Clear Favorites</string>
    <string name="clear_favorites_cancel">Cancel</string>

    <!-- Details menu -->
    <string name="details_menu">details</string>

    <!-- others -->
    <string name="mark_as_favorite">Mark it as favorite</string>
    <string name="movie_poster">Movie poster</string>
    <string name="user_rating">User Rating: </string>
    <string name="release_date">Release Date: </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce condimentum libero id enim tincidunt molestie. Nullam facilisis nunc ex, ac interdum urna pellentesque rhoncus. Ut aliquet lorem a libero varius.</string>
</resources>
