<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/sort_by"
        android:title="@string/sort_by"
        app:showAsAction="never">
        <item android:id="@+id/sort_most_popular"
            android:title="@string/sort_most_popular"/>

        <item android:id="@+id/sort_highest_rated"
            android:title="@string/sort_highest_rated"/>

        <item android:id="@+id/sort_favorites"
            android:title="@string/sort_favorites"/>
    </group>
    <group android:id="@+id/settings_group">
        <item android:id="@+id/settings_clear_favorites"
            android:title="@string/settings_clear_favorites"/>
    </group>
</menu>