<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_padding">

        <TextView
            android:id="@+id/movie_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/details_title"
            tools:text = "Movie Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/movie_poster_image"
            android:layout_marginTop="@dimen/normal_margin"
            android:scaleType="fitXY"
            android:contentDescription="@string/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movie_original_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            style="@style/details_overview"
            tools:text = "@string/lorem_ipsum"
            app:layout_constraintTop_toBottomOf="@id/movie_poster_image" />

        <TextView
            android:id="@+id/vote_average_label"
            android:text="@string/user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wide_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <TextView
            android:id="@+id/vote_average"
            tools:text="6%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_wide_margin"
            app:layout_constraintLeft_toRightOf="@id/vote_average_label"
            app:layout_constraintTop_toTopOf="@id/vote_average_label" />

        <TextView
            android:id="@+id/release_date_label"
            android:text="@string/release_date"
            android:layout_marginTop="@dimen/extra_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vote_average_label"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/release_date"
            tools:text="Aug 16, 1961"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/release_date_label"
            app:layout_constraintLeft_toLeftOf="@id/vote_average" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>